# libvirt-builder

./: .gitignore  .gitpublish  AUTHORS.in  HACKING  Makefile.am  NEWS  README.in  autobuild.sh  autogen.sh  cfg.mk  configure.ac  libvirt-builder-1.0.pc.in  libvirt-builder.spec.in
.github/: lockdown.yml
docs/: Makefile.am  libvirt-builder-docs.xml
libvirt-builder/: Makefile.am  libvirt-builder-enum-types.c.template  libvirt-builder-enum-types.h.template  libvirt-builder-internal.h  libvirt-builder-main.c  libvirt-builder-main.h  libvirt-builder.h  libvirt-builder.sym
m4/: virt-compile-warnings.m4  virt-coverage.m4  virt-gettext.m4  virt-gtk-misc.m4  virt-introspection.m4  virt-win32.m4
vapi/: Makefile.am
